154_#127-timestamp-als-optionalen-wert-hinzufügen-und-swagger-doku-angepasst
